[package]
name = "zstor_v2"
version = "0.2.0"
authors = ["The Threefold Tech developers <info@threefold.tech>"]
edition = "2018"
repository = "https://github.com/threefoldtech/0-stor_v2"

[[bin]]
name = "zstor_v2"
path = "src/main.rs"

[[bin]]
name = "test-zdb"
path = "src/test_zdb.rs"

[[bin]]
name = "test-etcd"
path = "src/test_etcd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reed-solomon-erasure = "4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
hex = "0.4"
aes-gcm = { version = "0.8", features = ["std"] }
snap = "1"
log = { version = "0.4", features = ["release_max_level_debug"] }
redis = { version = "0.20", default-features = false, features = ["aio", "tokio-comp"] }
sha-1 = "0.9"
simple_logger = "1.11"
pretty_env_logger = "0.4"
structopt = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
etcd-rs = "0.5"
futures = "0.3"
blake2 = "0.9"
gray-codes = "0.1"

[dev-dependencies]
rand = "0.7"

[profile.release]
# opt-level = 'z'
lto = true
codegen-units = 1
