[package]
name = "grid_explorer_client"
version = "0.1.0"
authors = ["The Threefold Tech developers <info@threefold.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_repr = "0.1"
stellar-base = "0.5.0"
bip39 = "1.0.0"
stellar-horizon = "0.6.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
base64 = "0.13.0"
http-sig = "0.3.1"
chrono = "0.4.19"