[package]
name = "playground"
version = "0.1.0"
authors = ["dylanVerstraete <dylan_verstraete1@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid_explorer_client = { path = "../grid_explorer_client" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }