[package]
name = "zdb_mon"
version = "0.1.0"
authors = ["Lee Smet <lee@threefold.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
prometheus = "0.12"
zstor_v2 = { path = "../zstor" }
toml = "0.5"
hex = "0.4"
futures = "0.3"
actix-web = "4.0.0-beta.6"
