[package]
name = "zstor_v2"
version = "0.4.0"
authors = ["The Threefold Tech developers <info@threefold.tech>"]
edition = "2021"
repository = "https://github.com/threefoldtech/0-stor_v2"

[[bin]]
name = "zstor_v2"
path = "src/main.rs"

[[bin]]
name = "test-zdb"
path = "src/test_zdb.rs"

[[bench]]
name = "aes_encryptor"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vendored = ["openssl"]

[dependencies]
reed-solomon-erasure = "6.0.0"
rand = "0.8.5"
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"
hex = "0.4.3"
aes-gcm = { version = "0.10.3", features = ["std"] }
snap = "1.1.1"
log = { version = "0.4.22", features = ["release_max_level_debug"] }
redis = { version = "0.26.1", default-features = false, features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
sha-1 = "0.10.1"
simple_logger = "1.11" # TODO: remove this
pretty_env_logger = "0.5.0"
structopt = "0.3.26"
tokio = { version = "1.39.3", features = ["rt", "macros", "fs"] }
futures = "0.3.30"
blake2 = "0.10.6"
gray-codes = "0.1.1"
log4rs = { version = "1.3", default-features = false, features = [
  "rolling_file_appender",
  "threshold_filter",
  "fixed_window_roller",
  "size_trigger",
  "compound_policy",
] }
async-trait = "0.1"
bincode = "1"
openssl = { version = "0.10", features = ["vendored"], optional = true }
actix = "0.13.5"
actix-rt = "2.2"
tokio-util = "0.7.11"
chrono = "0.4"
serde_json = "1.0.35"
prometheus = "0.13.4"
tide = "0.16"
nix = "0.29.0"
path-clean = "1.0.1"
prettytable = { version = "0.10.0", default-features = false }

[build-dependencies]
bindgen = "0.70.1"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
